# buzz

./: .cirrus.yml  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  Buzz.desktop  Buzz.spec  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.ja_JP.md  README.md  __test_whisper_cpp.py  __version__.py  _whisper.py  build.py  build_buzz.bat  build_renamer.bat  bundle-mac-arm64.sh  buzz.desktop  check_models.ps1  check_server.py  cli.py  docs.html  entitlements.plist  fd.py  fix-py-bundle.sh  gui.py  gui_test.py  hatch_build.py  index.html  installer.iss  io.github.chidiwilliams.Buzz.yml  libwhisper.dylib  main.py  (+30 more)
.github/workflows/: build.yml  bundle.yml  ci.yml  codacy.yml  codeql.yml  gh-pages.yml  manual-build.yml  snapcraft.yml  test.yml  update-ytdlp.yml
.run/: pytest.run.xml
Buzz.swift/: .gitignore  README.md
Buzz.swift/Buzz/: Buzz.entitlements  BuzzApp.swift  CircularProgressView.swift  ContentView.swift  FloatingTranscriptionView.swift  HighlightTextView.swift  ModelLoader.swift  Recorder.swift  TranscriptionExporter.swift  TranscriptionListRowContentView.swift  TranscriptionStore.swift  TranscriptionView.swift
Buzz.swift/Buzz.xcodeproj/: project.pbxproj
Buzz.swift/BuzzTests/: BuzzTests.swift
Buzz.swift/BuzzUITests/: BuzzUITests.swift  BuzzUITestsLaunchTests.swift
appimage/: build-appimage.sh
assets/: buzz.desktop  buzz.icns
assets/css/: styles.5917496c.css
assets/js/: 0480b142.0adbc5c7.js  0480b142.0d57f5b2.js  0480b142.192b5033.js  0480b142.1f430110.js  0480b142.1f75987b.js  0480b142.2710aeed.js  0480b142.27950c69.js  0480b142.29cc7c5e.js  0480b142.2dbf0aa9.js  0480b142.37ac2ad1.js  0480b142.3b7a6c7b.js  0480b142.3e75d99a.js  0480b142.4a3aeca1.js  0480b142.4cf7acba.js  0480b142.61b1ce51.js  0480b142.6861ca9e.js  0480b142.771f74ef.js  0480b142.7d3a97be.js  0480b142.8127431d.js  0480b142.a78b0bc7.js  0480b142.b45e1b79.js  0480b142.b4f14fc3.js  0480b142.b8d77648.js  0480b142.c512727a.js  0480b142.d4c4c2ae.js  0480b142.d79c8435.js  0480b142.ed72cf64.js  0480b142.eda248b8.js  0480b142.f0d933f2.js  0480b142.f2e8e428.js  0480b142.f6a3779c.js  0480b142.ff655b5e.js  1102fda7.026b4b2b.js  1102fda7.0e12deaa.js  1102fda7.25cda54b.js  1102fda7.2b1034e1.js  1102fda7.3781a4b4.js  1102fda7.3a149271.js  1102fda7.4bb2c458.js  1102fda7.4cfcb3b9.js  (+192 more)
buzz/: __init__.py  __main__.py  __version__.py  action.py  assets.py  audio_source.py  buzz.py  cache.py  cli.py  conn.py  constants.py  cuda_manager.py  cuda_setup.py  dialogs.py  ffmpeg_video_player.py  file_transcriber_queue_worker.py  gui.py  icon.py  locale.py  model_loader.py  path.py  paths.py  pip_utils.py  recording.py  recording_transcriber.py  schema.sql  settings.py  sounddevice_player.py  suggest_completion.py  transcriber.py  transformers_whisper.py  translator.py  update_checker.py  vocab_replacement.py  whisper_audio.py  whispr.py
buzz-audio-test/: AudioTest.spec  audio_test.py  build_windows.bat
buzz/assets/: buzz.icns
buzz/db/: db.py  helpers.py  migrator.py  schema.sql
buzz/demucs/: __init__.py  api.py  apply.py  audio.py  hdemucs.py  htdemucs.py  repitch.py  requirements.txt  separate.py  train.py  wav.py
buzz/plugins/: AGENTS.md  CLAUDE.md  base.py  loader.py  manager.py  post_processing.py
buzz/screen_capture/: Package.swift
buzz/settings/: recording_transcriber_mode.py  settings.py  shortcut.py  shortcut_settings.py  shortcuts.py
buzz/store/: keyring_store.py
buzz/transcriber/: bulk_renamer.py  buzz.code-workspace  cuda_device.py  file_transcriber.py  local_whisper_cpp_server_transcriber.py  openai_whisper_api_file_transcriber.py  recording_transcriber.py  renamer_server.py  transcriber.py  whisper_cpp.py  whisper_cpp_file_transcriber.py  whisper_file_transcriber.py
buzz/widgets/: about_dialog.py  application.py  audio_devices_combo_box.py  audio_meter_widget.py  audio_player.py  bulk_rename_dialog.py  cuda_installer_widget.py  form_label.py  general_preferences_widget.py  icon.py  icon_presentation.py  import_url_dialog.py  line_edit.py  main_window.py  main_window_toolbar.py  menu_bar.py  model_download_progress_dialog.py  model_type_combo_box.py  models_preferences_widget.py  openai_api_key_line_edit.py  password_line_edit.py  preferences_dialog.py  presentation_window.py  record_button.py  record_delegate.py  recording_transcriber_widget.py  sequence_edit.py  shortcuts_editor_preferences_widget.py  shortcuts_editor_widget.py  snap_notice.py  text_display_box.py  toolbar.py  transcription_record.py  transcription_segments_editor_widget.py  transcription_task_folder_watcher.py  transcription_tasks_table_widget.py  (+3 more)
demucs/: .gitignore  CONTRIBUTING.md  Demucs.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  Readme.md  distrib.py  ema.py  environment-cpu.yml  environment-cuda.yml  htdemucs.py  hubconf.py  mypy.ini  requirements.txt  requirements_minimal.txt  setup.cfg  setup.py  solver.py  svd.py
dll_backup/: Readme.md
docs/: cli.html  docusaurus.config.js  faq.html  installation.html  package-lock.json  package.json  preferences.html  usage.html
flatpak/: com.chidiwilliams.Buzz.yml  libapparmor.so.1  libavutil.so.58  libbsd.so.0  libmd.so.0  run-buzz.sh
patches/: ctc_forced_aligner_windows_mutex.patch
readme/: README.ja_JP.md  README.zh_CN.md
renamer-ui/: .gitignore  extract_electron.js  fix_pathtxt.js  package-lock.json  package.json
scripts/: bundle_linux.sh  download-models.py  flatpak-pip-generator.py
snap/: snapcraft.yaml
testdata/: whisper.m4a
tests/: app_main.py  audio.py  cache_test.py  cli_test.py  conftest.py  cuda_manager_test.py  cuda_setup_test.py  ffmpeg_video_player_test.py  gui_test.py  mock_qt.py  mock_sounddevice.py  mocks.py  model_loader.py  model_loader_test.py  pip_utils_test.py  recording_test.py  recording_transcriber_test.py  sd.py  test_audio_source.py  transcriber_benchmarks_test.py  transcriber_test.py  transformers_transcriber_test.py  transformers_whisper_test.py  translator_test.py  update_checker_test.py
zh/: 404.html  docs.html  index.html  sitemap.xml
(+507 files in other folders)
