[project]
name = "buzz-captions"
version = "1.3.0"
description = ""
authors = [
    {name = "Chidi Williams", email = "williamschidi1@gmail.com"}
]
readme = "README.md"
license = { text = "MIT" }
repository = "https://github.com/chidiwilliams/buzz"
documentation = "https://chidiwilliams.github.io/buzz/docs"
requires-python = ">=3.9,<3.13"
dynamic = [ "dependencies" ]

[project.scripts]
buzz = "buzz.buzz:main"

[tool.poetry]
packages = [
    { include = "buzz" },
]
include = [
    { path = "buzz/libwhisper.*", format = ["sdist", "wheel"] },
    { path = "buzz/libwhisper-coreml.*", format = ["sdist", "wheel"] },
    { path = "buzz/*.dll", format = ["sdist", "wheel"] },
    { path = "buzz/whisper_cpp.py", format = ["sdist", "wheel"] },
    { path = "buzz/locale/*/LC_MESSAGES/buzz.mo", format = ["sdist", "wheel"] },
    { path = "buzz/dll_backup/*", format = ["sdist", "wheel"] },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
sounddevice = "^0.4.5"
humanize = "^4.4.0"
PyQt6 = "6.8.1"
PyQt6-Qt6 = "6.8.2"
PyQt6-sip = "13.10.0"
openai = "^1.14.2"
keyring = "^25.0.0"
platformdirs = "^4.2.0"
dataclasses-json = "^0.6.4"
numpy = "^1.21.2"
requests = "^2.31.0"
yt-dlp = "^2025.2.19"
stable-ts = "^2.18.3"
faster-whisper = "^1.1.1"
openai-whisper = "^20240930"
# transformers 4.50.0 has some bug
transformers = "4.49.0"
accelerate = "^1.0.1"
polib = "^1.2.0"
srt-equalizer = "^0.1.10"
# torch 2.2.2 is last with intel macOS support
torch = "2.2.2"
torchaudio = "2.2.2"
# ctranslate2 4.3.1 is last with intel macOS support
ctranslate2 = "4.3.1"
darkdetect = "^0.8.0"
# requirements for demucs - TODO maybe remove
dora-search = "^0.1.12"
diffq = "^0.2.4"
einops = "^0.8.1"
flake8 = "^7.1.2"
hydra-colorlog = "^1.2.0"
hydra-core = "^1.3.2"
julius = "^0.2.7"
lameenc = "^1.8.1"
museval = "^0.4.1"
mypy = "^1.15.0"
openunmix = "^1.3.0"
pyyaml = "^6.0.2"
submitit = "^1.5.2"
tqdm = "^4.67.1"
treetable = "^0.2.5"
soundfile = "^0.13.1"
urllib3 = "^2.3.0"
demucs = {url = "https://github.com/raivisdejus/demucs/releases/download/4.1.0a3/demucs-4.1.0a3-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pyinstaller = "^6.12.0"
pyinstaller-hooks-contrib = "^2025.1"
six = "^1.16.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-qt = "^4.1.0"
pytest-xvfb = "^2.0.0"
pytest-mock = "^3.12.0"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
pytest-benchmark = "^4.0.0"
ruff = "^0.1.3"

[tool.poetry.group.build.dependencies]
ctypesgen = "^1.1.1"
cmake = "^3.26.4"
polib = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0", "ctypesgen", "setuptools", "cmake", "polib"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"

[tool.ruff]
exclude = [
    "**/whisper.cpp",
]
